[package]
name = "website-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
dotenv = "0.15.0"
http = "1.1.0"
reqwest = { version = "0.11.25", features = ["json", "stream"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
